--- a/index.html
+++ b/index.html
@@ -250,13 +250,13 @@
                 <div class="col-lg-6">
                     <form>
                         <div class="mb-3">
-                            <input type="text" class="form-control bg-dark text-light" placeholder="ragupathy" required>
+                            <input type="text" class="form-control bg-dark text-light" placeholder="name" required>
                         </div>
                         <div class="mb-3">
-                            <input type="email" class="form-control bg-dark text-light" placeholder="raghupathy444@gmail.com" required>
+                            <input type="email" class="form-control bg-dark text-light" placeholder="gmail" required>
                         </div>
                         <div class="mb-3">
-                            <textarea class="form-control bg-dark text-light" rows="5" placeholder="Welcome to my portfolio" required></textarea>
+                            <textarea class="form-control bg-dark text-light" rows="5" placeholder="Send your message " required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Send Message</button>
                     </form>
