--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     
     <!-- Google Analytics (Optional) -->
     <!-- Replace 'G-XXXXXXXXXX' with your tracking ID -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1NK0W8TWMS"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-XXXXXXXXXX');
+      gtag('config', 'G-1NK0W8TWMS');
     </script>
 </head>
 <body class="bg-dark text-light">
