--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     </nav>
 
     <!-- Hero Section -->
+    <iframe src="protected-content.html" style="border:none;"></iframe>
     <section id="home" class="hero d-flex align-items-center min-vh-100 bg-dark text-light">
         <div class="container">
             <div class="row align-items-center">
