--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 animate__animated animate__fadeInUp">
                     <h1 class="text-white mb-4 animate__animated animate__bounceInRight">Hi, I'm <span class="text-primary">Ragupathy</span></h1>
-                    <h2 class="text-white-50 mb-4 animate__animated animate__bounceInLeft">Junior Web Developer</h2>
+                    <h2 class="fs-4 mb-4"><span class="text-rotate" data-rotate='["Junior Web Developer", Web Developer", "UI/UX Designer", "Web design"]'></span></h2>
                     <p class="text-white-50 mb-4">I build exceptional digital experiences with clean, efficient code.</p>
                     <a href="#projects" class="btn btn-primary btn-lg me-3 animate__animated animate__pulse animate__backInLeft">View My Work</a>
                     <a href="#contact" class="btn btn-outline-light btn-lg animate__animated animate__backInRight">Contact Me</a>
