Refactor index.html and enhance script.js with security features

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </script>
 </head>
 <body class="bg-dark text-light">
-    <!-- Navigation Bar -->
+     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
         <div class="container animate__animated animate__lightSpeedInRight">
             <a class="navbar-brand fw-bold" href="#">Ragupathy</a>
@@ -62,13 +62,12 @@
     </nav>
 
     <!-- Hero Section -->
-    <iframe src="protected-content.html" style="border:none;"></iframe>
     <section id="home" class="hero d-flex align-items-center min-vh-100 bg-dark text-light">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 animate__animated animate__fadeInUp">
                     <h1 class="text-white mb-4 animate__animated animate__bounceInRight">Hi, I'm <span class="text-primary">Ragupathy</span></h1>
-                    <h2 class="fs-4 mb-4"><span class="text-rotate" data-rotate='["Junior Web Developer", Web Developer", "UI/UX Designer", "Web design"]'></span></h2>
+                    <h2 class="fs-4 mb-4">Junior Web Developer<span class="text-rotate" data-rotate='["Web Developer", "UI/UX Designer", "Web design"]'></span></h2>
                     <p class="text-white-50 mb-4">I build exceptional digital experiences with clean, efficient code.</p>
                     <a href="#projects" class="btn btn-primary btn-lg me-3 animate__animated animate__pulse animate__backInLeft">View My Work</a>
                     <a href="#contact" class="btn btn-outline-light btn-lg animate__animated animate__backInRight">Contact Me</a>
