Update CV download link in index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ document.addEventListener('keydown', e => {
                             </ul>
                         </div>
                     </div>
-                    <a href="#" class="btn btn-primary mt-3">Download CV</a>
+                    <a href="C:/Users/ADMIN/Documents/R-resume.pdf" class="btn btn-primary mt-3">Download CV</a>
                 </div>
                 </div>
         </div>
