--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ document.addEventListener('keydown', e => {
                     <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#internship">Internship</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
@@ -103,6 +104,30 @@ document.addEventListener('keydown', e => {
         </div>
     </section>
 
+ <!-- Internship Section -->
+    <section id="internship" class="py-5 bg-black"> 
+        <div class="container py-5">
+            <h2 class="text-center mb-5 animate__animated animate__flipInX">Internship <span class="text-primary">Experience</span></h2>
+            <div class="row">
+                <div class="col-md-6 animate__animated animate__fadeInLeft">
+                    <h1 class="h4 mb-4 text-decoration-underline">Accent Techno Soft | 15-Days | May-2025</h1>
+                    <h3 class="h4 mb-4">Full Stack Web Development Intern</h3>
+                    <p>During my internship enhancing my skills in HTML, CSS, JavaScript, Bootstrap & PHP, MYSQL, . I collaborated with a team to build responsive websites and learned best practices in coding and design.</p>
+                    <a href="img/internship.jpg" class="btn btn-primary mt-3">View Certificate</a>
+                </div>
+                <div class="col-md-6 animate__animated animate__fadeInRight">
+                    <h3 class="h4 mb-4">Key Achievements</h3>
+                    <ul>
+                        <li>Developed a Responsive Portfolio website using HTML,CSS,JavaScript & Bootstrap.</li>
+                        <li>Learned about Advanced HTML tags and Advanced CSS techniques.</li>
+                        <li>Learned about PHP & MYSQL for backend development.</li>    
+                        <li>Improved problem-solving skills through real-world coding challenges.</li>
+                        <li>Gained experience in version control using Git and GitHub.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- About Section -->
     <section id="about" class="py-5">
@@ -138,7 +163,7 @@ document.addEventListener('keydown', e => {
         </div>
     </section>
 
-    <!-- Skills Section -->
+<!-- Skills Section -->
     <section id="skills" class="py-5 bg-black">
         <div class="container py-5 animate__animated animate__fadeInLeftBig">
             <h2 class="text-center mb-5 animate__animated animate__rollIn">My <span class="text-primary">Skills</span></h2>
@@ -147,8 +172,8 @@ document.addEventListener('keydown', e => {
                 <div class="col-md-6 col-lg-4">
                     <div class="card bg-dark border-0 h-100">
                         <div class="card-body text-light">
-                            <h3 class="h5 card-title">HTML</h3>
-                            <p class="card-text">Proficient in creating semantic and accessible HTML structures.</p>
+                            <h3 class="h5 card-title">Frontend Development</h3>
+                            <p class="card-text">Proficient in HTML, CSS, and JavaScript to create responsive and interactive web applications.</p>
                         </div>
                     </div>
                 </div>
@@ -156,8 +181,8 @@ document.addEventListener('keydown', e => {
                 <div class="col-md-6 col-lg-4">
                     <div class="card bg-dark border-0 h-100">
                         <div class="card-body text-light">
-                            <h3 class="h5 card-title">CSS</h3>
-                            <p class="card-text">Experienced in styling websites with CSS, including Flexbox and Grid layouts.</p>
+                            <h3 class="h5 card-title">Version Control</h3>
+                            <p class="card-text">Experienced in using Git for version control and collaboration on projects.</p>
                         </div>
                     </div>
                 </div>
@@ -165,8 +190,8 @@ document.addEventListener('keydown', e => {
                 <div class="col-md-6 col-lg-4">
                     <div class="card bg-dark border-0 h-100">
                         <div class="card-body text-light">
-                            <h3 class="h5 card-title">JavaScript</h3>
-                            <p class="card-text">Skilled in JavaScript for dynamic and interactive web applications.</p>
+                            <h3 class="h5 card-title">AI Creative Coder</h3>
+                            <p class="card-text">Skilled in using AI tools to enhance coding efficiency and creativity.</p>
                         </div>
                     </div>
                 </div>
@@ -183,8 +208,8 @@ document.addEventListener('keydown', e => {
                 <div class="col-md-6 col-lg-4">
                     <div class="card bg-dark border-0 h-100">
                         <div class="card-body text-light">
-                            <h3 class="h5 card-title">Version Control</h3>
-                            <p class="card-text">Familiar with Git for version control and collaboration on projects.</p>
+                            <h3 class="h5 card-title">PHP & MYSQL Basic</h3>
+                            <p class="card-text">Basic knowledge of PHP for server-side scripting and MYSQL for database management.</p>
                         </div>
                     </div>
                 </div>
@@ -192,8 +217,8 @@ document.addEventListener('keydown', e => {
                 <div class="col-md-6 col-lg-4">
                     <div class="card bg-dark border-0 h-100">
                         <div class="card-body text-light">
-                            <h3 class="h5 card-title">PHP</h3>
-                            <p class="card-text">Basic knowledge of PHP for server-side scripting and dynamic web content.</p>
+                            <h3 class="h5 card-title">Visual Stuido</h3>
+                            <p class="card-text">Familiar with Visual Studio for developing and debugging web applications.</p>
                         </div>
                     </div>
                 </div>
@@ -201,6 +226,7 @@ document.addEventListener('keydown', e => {
             </div>
         </div>
     </section>
+
 
    <!-- Projects Section -->
     <section id="projects" class="py-5">
