--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ document.addEventListener('keydown', e => {
                             </ul>
                         </div>
                     </div>
-                    <a href="img/R-resume.pdf" class="btn btn-primary mt-3">Download CV</a>
+                    <a href="img/Resume.pdf" class="btn btn-primary mt-3">Download CV</a>
                 </div>
                 </div>
         </div>
